Fixed bug in fn. show_madlib_form().
render_template is the function to call. There was a typo.

--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Play a Game</title>
+        <title>Goodbye message</title>
     </head>
     <body>
         Goodbye!
